Deployment/loginpage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loginpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loginpage
  template:
    metadata:
      labels:
        app: loginpage
    spec:
      containers:
      - name: loginpage
        image: mj5248/test-vue-loginpage:latest
        ports:
        - containerPort: 3001
      restartPolicy: Always
