Deployment/loginpage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loginpage-service
spec:
  type: ClusterIP
  selector:
    app: loginpage
  ports:
    - port: 3001
      targetPort: 3001
