Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: "frontend.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8088 
  - host: "backend.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000 
  - host: "loginpage.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loginpage-service
            port:
              number: 3001
